dev/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-application-argo
spec:
  selector:
    matchLabels:
      app: nginx-application-argo
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-application-argo
    spec:
      containers:
      - name: nginx-application-argo
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
